--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-fastclick": "^3.0.2",
     "react-infinite-scroller": "^1.1.4",
     "react-lazyload": "^2.3.0",
     "react-loadable": "^5.3.1",
