--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "antd-mobile": "^2.1.8",
     "axios": "^0.18.0",
     "hex2rgba": "^0.0.1",
+    "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-fastclick": "^3.0.2",
+    "react-hammerjs": "^1.0.1",
     "react-infinite-scroller": "^1.1.4",
     "react-lazyload": "^2.3.0",
     "react-loadable": "^5.3.1",
