--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "xp-loadcss": "^1.0.0",
     "xp-loadjs": "^1.0.0",
     "xp-reset.css": "^1.0.4",
+    "xp-storage": "^1.0.7",
     "xp-utils": "^1.1.9"
   },
   "devDependencies": {
