--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.jsx src"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "antd-mobile": "^2.1.8",
     "axios": "^0.18.0",
     "hex2rgba": "^0.0.1",
