--- a/package.json
+++ b/package.json
@@ -68,11 +68,15 @@
     "html-webpack-plugin": "^3.2.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "portfinder": "^1.0.13",
+    "postcss-aspect-ratio-mini": "^0.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.4",
     "postcss-nested": "^3.0.0",
+    "postcss-px-to-viewport": "^0.0.3",
     "postcss-url": "^7.3.2",
+    "postcss-viewport-units": "^0.1.4",
+    "postcss-write-svg": "^3.0.1",
     "react-hot-loader": "^4.0.1",
     "style-loader": "^0.20.3",
     "sw-precache-webpack-plugin": "^0.11.5",
