--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd-mobile": "^2.1.8",
     "axios": "^0.18.0",
     "hex2rgba": "^0.0.1",
+    "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -24,6 +25,7 @@
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-swipe": "^5.1.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
